--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^20.10.4",
+    "axios": "^1.6.2",
+    "readline-sync": "^1.4.10",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/readline-sync": "^1.4.8"
   }
 }
